first funtional test deploy for custom rapla
